stylesheet.css
/* ==========================================================================
   Base styles: Font Definitions
   ========================================================================== */
/* dm-mono-regular - latin-ext_latin */
@font-face {
	font-family: 'DM Mono';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src: url('/fonts/dm-mono-v10-latin-ext_latin-regular.eot');
	/* IE9 Compat Modes */
	src: local(''),
		url('fonts/dm-mono-v10-latin-ext_latin-regular.eot?#iefix') format('embedded-opentype'),
		/* IE6-IE8 */
		url('fonts/dm-mono-v10-latin-ext_latin-regular.woff2') format('woff2'),
		/* Super Modern Browsers */
		url('fonts/dm-mono-v10-latin-ext_latin-regular.woff') format('woff'),
		/* Modern Browsers */
		url('fonts/dm-mono-v10-latin-ext_latin-regular.ttf') format('truetype'),
		/* Safari, Android, iOS */
		url('fonts/dm-mono-v10-latin-ext_latin-regular.svg#DMMono') format('svg');
	/* Legacy iOS */
	unicode-range: U+0021-007E, U+00A1-00B4, U+00B6-011B, U+011E-0123, U+0128-0131, U+0136-0137, U+0139-0148, U+014C-015B, U+015E-0165, U+0168-017E, U+018F, U+0192, U+01FC-01FD, U+0128-012B, U+0259, U+02DA, U+02DC, U+1E80-1E85, U+1EF2-1EF3, U+1EF8-1EF9, U+2013-2014, U+2018-201A, U+201C-201E, U+2020, U+2022, U+2026, U+2074, U+20AC, U+20BD, U+2113, U+2122, U+2212, U+2215;
}

/* ubuntu-regular - latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic */
/* Accessibility Mode Font */
@font-face {
	font-display: swap;
	font-family: 'Ubuntu';
	font-style: normal;
	font-weight: 400;
	src: url('fonts/ubuntu-v20-latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.eot'); /* IE9 Compat Modes */
	src: url('fonts/ubuntu-v20-latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular?#iefix') format('embedded-opentype'), /* IE6-IE8 */
		 url('fonts/ubuntu-v20-latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
		 url('fonts/ubuntu-v20-latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
		 url('fonts/ubuntu-v20-latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
		 url('fonts/ubuntu-v20-latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.svg#Ubuntu') format('svg'); /* Legacy iOS */
}

/* ==========================================================================
   Base styles: Accessibility Mode Toggler
   ========================================================================== */
input {
	opacity: 0; /* Hide the checkbox */
	position: relative;
  }
  
label {
	color: #fff;
	cursor: pointer;
	text-align: center;
  }

input[type=checkbox]:focus {
	opacity: 0.1; /* Show the checkbox when when focused */
 }

 input:focus-visible + span {
	visibility: visible; /* Show a helpful label when focused because from a keyboard action */
  }

input:checked ~ div {
	font-family: 'Ubuntu', sans-serif; /* Accessibility mode main settings */
	background: rgba(15, 15, 15, 0.8);
	font-size: 1.4em;
	line-height: 1.6;
  }

span.toggler {
	visibility: hidden; /* Hide the helpful label for non-keyboard users */
	text-align: center;
}

/* ==========================================================================
   Base styles: General
   ========================================================================== */
body {
	background-repeat: repeat;
	background-size: cover;
	background-attachment: fixed;
	background-color: #313131;
	image-rendering: high-quality;
	font-family: 'DM Mono', 'Consolas', monospace;
	font-size: 1.15em;
	line-height: 1.4;
	color: #e1e1e1;
	text-shadow: 1px 1px 3px #444;
}

/* Headers */
h1,
h2,
h3,
h4,
h5,
h6 {
	text-align: center;
}

/* Links */
a {
	color: #ffffff;
	word-wrap: break-word;
}

a:hover {
	color: #bbbbbb;
}

/* Paragraphs */
p {
	width: 74%;
	margin-right: auto;
	margin-left: auto;
	text-align: left;
}

/* Lists */
ol,
ul,
li {
	text-align: left;
	width: 84%;
	margin-right: auto;
	margin-left: auto;
	padding: 0%;
}

/* Code */
code {
	font-family: monospace;
	background-color: rgba(50, 50, 50, 0.5);
	padding: 1px;
}

/* Quote blocks */
blockquote {
	text-align: left;
	width: 70%;
	margin-right: auto;
	margin-left: auto;
	padding: 0.65em;
	background-color: rgba(50, 50, 50, 0.3);
	border: 1px solid #6e6e6e;
}

hr {
	width: 95%;
}

/* Images */
img {
	max-width: 74%;
	text-align: center;
}

/* Custom Classes */

/* Webring links */
.webring {
	text-align: center;
	/*font-size: 1.25em;*/
}

/* Center-aligned text */
.center {
	text-align: center;
}

/* Background and Menu */
.bg,
.menu {
	margin-left: 2%;
	margin-right: 2%;
	padding: 0.65em;
	background: rgba(15, 15, 15, 0.5);
	text-align: center;
	border: 1px solid #6e6e6e;
	backdrop-filter: blur(2px);
}

/* Code block */
.codeblock {
	margin-left: 2%;
	margin-right: 2%;
	padding: 0.65em;
	background: rgba(50, 50, 50, 0.3);
	border: 1px solid #6e6e6e;
	text-align: left;
	overflow: auto;
}

/* Menu links */
.menu a {
	margin-right: 0.6em;
	margin-left: 0.6em;
}

.unitable
{
	overflow-x: auto;
}
/* Tables */

table, th, td {
	border: 1px solid;
}


th, td {
	padding: 10px;
}

table {
	border-collapse: collapse;
	margin-left: auto;
	margin-right: auto;
	width: 70%;
}

/* ==========================================================================
   Base styles: Media Queries (Responsive Design)
   ========================================================================== */

/* Phones / Tablets */
@media screen and (orientation: portrait) {
	.input {
		display: none; /* Hide the checkbox completely on mobile */
	}

	span.toggler {
		display: none; /* Hide the secret label completely on mobile */
	}

	body {
		background-image: url('files/images/bg2.webp');
	}

	.intro-text img
	{
		width: 60%;
		height: 60%;
	}

	.cv-image
	{
		width: 60%;
		height: 60%;
	}

	.cv-text::before
	{
		content: "\a";
		white-space: pre;
	}

	.cv-text
	{
		display: inline-block;
		text-align: left;
	}

	.cv-paragraph
	{
		text-align: center;
	}
}

/* Desktops / Laptops */
@media screen and (orientation: landscape) {
	body {
		background-image: url('files/images/bg.webp');
	}

	.cv-text {
		align-self: flex-start;
	}

	.intro-text img
	{
		width: 30%;
		height: 30%;
	}

	.cv-image {
		width: 20%;
		height: 20%;
		margin-right: 30px;
		flex-shrink: 0;
		flex: none;
	}

	.cv-paragraph {
		display: flex;
	}
}

